// Copyright © 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package com.lbe.imsdk.repository.model.proto;

option java_multiple_files = false;
option java_outer_classname = "IMMsg";

enum MsgType {
  JoinServer = 0;
  TextMsgType = 1;
  CreateSessionMsgType = 4;
  AgentUserJoinSessionMsgType = 5;  // 客服接入推送
  HasReadReceiptMsgType = 6;        // 已读推送
  KickOffLineMsgType = 7;           // 用户已经被服务器踢出
  EndSessionMsgType = 8;            // 会话结束
}

enum ContentType {
  InvalidContentType = 0;               //
  TextContentType = 1;                  // 文本
  ImgContentType = 2;                   // 图片
  VideoContentType = 3;                 // 音频
  CreateSessionContentType = 4;         // C端接入(只推送给B端)
  AgentUserJoinSessionContentType = 5;  // 客服接入(只推送给C端)
  EndSessionContentType = 6;            // 会话结束(只推送给C端)
  RankingContentType = 7;               // 排队
  FaqContentType = 8;                   // faq(原协议8)
  KnowledgePointContentType = 9;        // 知识点(原协议9)
  KnowledgeAnswerContentType = 10;       // 答案(原协议10)
  TransferContentType = 11;              // 转接
  SystemContentType = 12;                // 系统文本消息(欢迎语、引导语等系统发送的文本消息,原协议12)
  UnsupportedContentType = 13;           // 无客服在线
  AnswerMsgTimeoutContentType = 14;      // C端超时未回复消息
}

message State {
  int32 code = 1;
  string message = 2;
}

message MsgEntityToServer {
  MsgType msgType = 1;
  int64   seq = 2;
  Join    join = 3;
  MsgBody msgBody = 4;
}

message MsgEntityToFrontEnd {
  MsgType msgType = 1;
  State state = 2;
  MsgBody msgBody = 3;
  CreateSessionMsg createSessionMsg = 4;
  AgentUserJoinSessionMsg agentUserJoinSessionMsg = 5;
  HasReadReceiptMsg hasReadReceiptMsg = 6;
  EndSessionMsg endSessionMsg = 7;
  KickOffLineMsg kickOffLineMsg = 8;
}

message Join {
  string uid = 1;
  string sessionId = 2;
  string token = 3;
}

message JoinResp {
  string sessionId = 1;
  string serverId = 2;
}

message MsgBody {
  string senderUid = 1;   // 发送者ID
  string receiverUid = 2; // 接收者ID
  ContentType  msgType = 3;   // 消息类型
  int32  msgSeq = 4;      // 当前消息序列号
  string encKey = 5;      // 消息解密Key
  string msgBody = 6;     // 消息体内容
  int32  status = 7;      // 0-未读， 1-已读
  int64  createTime = 8;  // 消息创建时间
  string clientMsgID = 9; // 客户端自定义消息ID
  string sessionId = 10;  // sessionId
  string sendTime = 11;   // 客户端创建的发送时间
  string title = 12;      // 标题
  string senderNickname = 13;// 发送人昵称
  string senderFaceURL = 14; // 发送人头像
  string serverMsgID = 15;   // 服务端自定义消息ID
}

message SessionBasic {
  string sessionId = 1;   // 会话ID
  string headIcon = 2;    // 头标ICon
  string uid = 3;         // uid
  string source = 4;      // 来源APP
  string nickName = 5;    // 简称
  string devNo = 6;       // 设备号
  int64  createTime = 7;  // 创建时间
  string language = 8;    // 接入语言
  string extra = 9;       // 额外保留信息
  MsgBody latestMsg = 10; // 最新消息
  int32 status = 11;          // 0-排队 1-开始 2-结束
  int32 customerType = 12;    // 1-游客 2-非游客
  string nickID = 13;         //
}

message CreateSessionMsg {
    SessionBasic sessionBasic = 1;
}

message AgentUserJoinSessionMsg {
  string username = 1; // 客服用户名
}

message HasReadReceiptMsg {
  string sessionID = 1;
  repeated int64 hasReadSeqs = 2;
}

message KickOffLineMsg {
  string userID = 1;
  string identityID = 2;
}

message EndSessionMsg {
  string sessionID = 1;
}

message CreateSessionContent {
  int64 joinTime = 1; // 客户接入时间(毫秒)
}

message AgentUserJoinSessionContent {
  string username = 1;  // 客服昵称
  string faceUrl = 2;   // 头像
  int64 joinTime = 3;   // 加入时间(毫秒)
}

message EndSessionContent {
  int64 endTime = 1; // 结束时间(毫秒)
}

message RankingContent {
  int32 number = 1; // 排名
}

message TransferContent {
  int64 transferTime = 1; // 转接时间(毫秒)
}

message UnsupportedContent {

}

message AnswerMsgTimeoutContent {
  int64 timeout = 1; // 超时时间(秒)
}
